create export and import scripts

--- a/cms/package.json
+++ b/cms/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build"
+    "build": "strapi build",
+    "export": "strapi export -f strapi-export -k alma",
+    "import": "strapi import -f strapi-export.tar.gz.enc -k alma"
   },
   "devDependencies": {},
   "dependencies": {
